logs/shrew.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Brownie-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/brownie'...
Listing './lib/python3.5/site-packages/brownie/datastructures'...
Compiling './lib/python3.5/site-packages/brownie/datastructures/sequences.py'...
***   File "./lib/python3.5/site-packages/brownie/datastructures/sequences.py", line 683
    print code
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/brownie/tests'...
Listing './lib/python3.5/site-packages/keyring'...
Listing './lib/python3.5/site-packages/keyring/backends'...
Listing './lib/python3.5/site-packages/keyring/tests'...
Listing './lib/python3.5/site-packages/keyring/tests/backends'...
Listing './lib/python3.5/site-packages/keyring/util'...
Listing './lib/python3.5/site-packages/keyring-1.6.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shrew'...
Compiling './lib/python3.5/site-packages/shrew/cli.py'...
***   File "./lib/python3.5/site-packages/shrew/cli.py", line 382
    print '%s: %s' % (idx + 1, value)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shrew/utils'...
Compiling './lib/python3.5/site-packages/shrew/utils/auth.py'...
***   File "./lib/python3.5/site-packages/shrew/utils/auth.py", line 189
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/shrew-0.1.0a1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
